Update README.md
Anpassung der Readme