@@ -6,47 +6,71 @@
 
 
 ## Spiel
-R-Type-Space Spiel
+Space-Type Shoot'em Up 
+
+## Idee
+Bei Space-Type handelt es sich um ein Softwareprojekt von drei Studenten der Berliner Hochschule für Technik.
+Die Idee und inspiration von Space-Type kam vom Spiel Super R-Type aus dem Jahre 1991 welches für das Super Nintendo erschien.
+
+## Startbedingungen
+Um das Spiel spielen und starten zu können ist es wichtig einen Webserver inklusive Datenbank zu haben. Anbieten würde sich hierfür XAMPP (diesen nutzten wir selbst fürs Testen). Die MySQL DB sollte auf Port: 3307 betrieben werden, da dies der Port ist, auf dem die Server Class die Verbindung zur DB aufbaut.
+Sobald XAMPP läuft, sollte sich die TestDB-3.sql heruntergeladen werden und über PHPMyAdmin importiert werden. Die DB befindet Sicht im Root-Verzeichnis dieses Repos. Sobald diese Schritte abgeschlossen sind, kann das Projekt in eine beliebige Entwicklungsumgebung importiert werden (Eclipse, Visual Studio Code oder IntelliJ).
+
+### Eclipse:
+Hinzufügen der Startbedingungen für die Main.java
+--module-path /Users/username/Downloads/javafx-sdk-17.0.6/lib --add-modules javafx.controls,javafx.fxml,javafx.media
+und den Haken entfernen beim Punkt ... when launching with SWT
+Haken setzen bei: Use the -XX...
+
+### Buildpath
+Modulpath: JavaFx20, JavaFXSDK, OpenJDK20
+Classpath: mysql-connector-java-8.0.2.5 (zu finden unter Extra Libs im Repo)
 
 ### Setup:
 Git Clone https://github.com/gbensch00/Patterns-Frameworks.git
 
-### Spiel Startseite
-Auf der Startseite kann sich ein Spieler einloggen und registrieren.
+# Spiel Startseite
+Sobald das Spiel gestartet wurde landet man auf dem Login-Screen, hier kann sich ein Spieler einloggen und registrieren.
 
 ### Registrierung und Login
 
-Ein Spieler kann sich auf der Startseite (unten rechts) mittels Button "Hier klicken" einen Account einrichten. Hierzu erscheint ein neues Fenster wo der User einen Namen und Passwort anlegen muss.
+Ein Spieler kann sich auf der Startseite (unten rechts) mittels Button "Click here" einen Account einrichten. Hierzu erscheint ein neues Fenster wo der User einen Namen und Passwort anlegen muss. Das Spiel überprüft in der DB ob ein Account mit dem selben Namen bereits existiert und gibt dem Nutzer entsprechend feedback.
 
-Ist der Spieler bereits registriert, kann er sich mit seinem Usernamen und seinem Passwort einloggen (der Name ist einzigartig). Bei Falscheingaben werden Validierungsfehler angezeigt. Nach erfolgreichem Login erscheint das Cockpit Fenster.
+Ist der Spieler registriert, kann er sich mit seinem Usernamen und seinem Passwort einloggen (der Name ist einzigartig). Bei Falscheingaben werden Validierungsfehler angezeigt. Nach erfolgreichem Login erscheint das Cockpit Fenster.
 
 ### Cockpit Startseite
 
-Nach erfolgreichem Login befindet sich der Spieler im Login-Bereich. Hier kann er mittels Button Einstellungen, einen Highscore, Logout, Singleplayer-Game oder Multiplaer-Game weitere Seiten des Spiels besuchen.
+Nach erfolgreichem Login befindet sich der Spieler im Login-Bereich (das Cockpit). Hier kann er mittels Buttons wie "Settings", "Highscore", "Eject", "Singleplayer" oder "Multiplaer" weitere Seiten des Spiels besuchen.
 
 ### Settings
 
-Eingeloggte Spieler können hier weitere Einstellungen vornehmen. Zusätzlich kann er dort sein Profilbild ändern.
+Eingeloggte Spieler können hier weitere Einstellungen vornehmen:
+- Anpassung der Font
+- Anpassung der Font-Size
+- Anpassung der Window-Size (Auflösung)
+- Anpassung der Cockpit-Farbe im Cockpit-Menü
+Zusätzlich ist es dort möglich sein Profilbild ändern.
+Das Profilbild sollte ein PNG sein und die größe von 1MB nicht überschreiten.
 
 ### Highscore
 
-Hier werden die bisher gesammelten Punkte angezeigt.
+Hier werden die bisher gesammelten Punkte der Top 10 Spieler angezeigt.
 
 ### Eject
 
 Möglichkeit des Logouts.
 
-### Single-Game
+### Singleplayer-Game
 
-Der Spieler kann ein Einzelgame starten.
+Der Spieler kann ein Einzelgame lokal starten.
 
-### Multi-Game
+### Multiplayer-Game
 
-Der Spieler kann hier gegen einen anderen Spieler antreten. Nach klick auf dem Button wird er gefragt, ob es einen weiteren Spieler gibt. Sollte dies der Fall sein, kann der zweite User seinen Namen eingeben.
+Der Spieler kann hier lokal mit einen anderen Spieler gemeinsam antreten. Nach klick auf dem Button wird er gefragt, ob es einen weiteren Spieler gibt. Sollte dies der Fall sein, kann der zweite User seinen Namen eingeben.
 
 ### Spielanleitung
 
-Einzelspiel: Der Spieler bewegt sich mittels den Tasten w, s, a, d. Schießen kann der mit der Space-Taste. Ziel des Spiels ist es, in 60 Sekunden so viele wie möglich Gegner abzuschießen. Dabei gibt es einfache Gegner und spezielle Gegner. Beim Abschuss der einfachen Gegner bekommt der Spieler einen Punkt und beim Abschuss der Spezielgegner 5 Punkte. Der Spieler kann vom Gegner 3x getroffen werden. Nach dem dritten Treffer wird das Spiel beendet. Wird der Spieler nicht getroffen, so wird das Spiel automatisch nach 60 Sekunden beendet.
+Einzelspiel: Der Spieler bewegt sich mittels den Tasten w, s, a, d. Geschossen wird mit der Space-Taste. Ziel des Spiels ist es, in 60 Sekunden so viele wie möglich Gegner abzuschießen. Dabei gibt es einfache Gegner und spezielle Gegner. Beim Abschuss der einfachen Gegner bekommt der Spieler einen Punkt und beim Abschuss der Spezielgegner 5 Punkte. Der Spieler kann vom Gegner 3x getroffen werden. Nach dem dritten Treffer wird das Spiel beendet. Wird der Spieler nicht getroffen, so wird das Spiel automatisch nach 60 Sekunden beendet. Zusätzlich hat der Spieler die möglichkeit PowerUps einzusammeln die die Zeit um 15 Sekunden verlängern um mehr Punkte zu erhalten.
 
 
 ## Development
@@ -56,10 +80,10 @@ Einzelspiel: Der Spieler bewegt sich mittels den Tasten w, s, a, d. Schießen ka
 
 ### Server und Datenbank starten
 
-Für den Server wurde Xampp verwendet.
+Für den DB-Server wurde Xampp verwendet.
 Die Spieldaten werden in einer MySQL Datenbank gespeichert.
 
-Zur einfacheren Bereitstellung eines Webservers und einer Datenbank wurde auf das Programm XAMP zurückgeriffen. Auf XAMP wurde über phpmyadmin eine Datenbank erstellt, die den klangvollen Namen TestDB erhalten hat. In dieser existieren zwei Tabellen zur Datenspeicherung. Zum einen die Tabelle PLAYER welche Informationen über Nutzernamen, Passwörter und Highscores enthält. Zum anderen die Tabelle UserSettings in der Informationen wie Avatar, FontSize, FontType, Resolution und BackgroundColor gespeichert sind. Diese Tabelle dient dazu, um User Custumizations durchführen zu können, um so z.B. das Interface farblich anzupassen oder Attribute wie Auflösung oder Schriftgröße zu ändern.
+Zur einfacheren Bereitstellung eines Webservers und einer Datenbank wurde auf das Programm XAMPP zurückgeriffen. Auf XAMPP wurde über phpmyadmin eine Datenbank erstellt, die den klangvollen Namen TestDB erhalten hat. In dieser existieren zwei Tabellen zur Datenspeicherung. Zum einen die Tabelle PLAYER welche Informationen über Nutzernamen, Passwörter und Highscores enthält. Zum anderen die Tabelle UserSettings in der Informationen wie Avatar, FontSize, FontType, Resolution und BackgroundColor gespeichert sind. Diese Tabelle dient dazu, um User Custumizations durchführen zu können, um so z.B. das Interface farblich anzupassen oder Attribute wie Auflösung oder Schriftgröße zu ändern.
 
 Zum Anmelden wird beim Starten des Spieles nach den Login-Informationen verlangt, diese werden in den Feldern Username und Password eingetragen. Mit einem Klick auf Login werden diese Daten in eine XML-Datei umgewandelt und an den Server geschickt. Wenn die Übertragung erfolgreich war, wird die Benutzeroberfläche aktualisiert, um eine neue Szene (die "Lobby") angezeigt und die alte Szene (das Anmeldefenster) wird geschlossen. Sollte die Anmeldung nicht erfolgreich sein und false durch den Server gemeldet werden, erscheint ein Alert, in dem dem Nutzer mitgeteilt wird, dass der Nutzer nicht existiert oder das verwendete Passwort falsch ist.
 
@@ -89,5 +113,7 @@ In unserem Spiel sind diese drei Hauptkomponenten User, UserSettings, UserDAO, U
 JavaFX
 
 ### Threading-Verwendung
-
+Threading wurde in der Hinsicht verwendet, dass Login, DB-Abfragen und Aktualisierung über die Server Klasse durchgeführt wird, welche in einem parallelen Thread läuft.
+Login: Da das Programm nur einen Einstiegspunkt hat (Main.java) und es nicht separaten Startbereich nur für den Server existiert, wurde hier auf Threading zurückgegriffen, da der Server auf eine eingehende Verbindung wartet und den Quellcode sonst nicht weiter ausgeführt werden kann (was ein Starten des Login-Screens verhindert).
+Der Server lauscht dann auf den Port: 1234, ob sich eine Verbindung aufbaut und ob es sich dabei um einen Login (Auth) oder eine Nutzererstellung handelt (NewUser).
 
